25. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- window title on borrow dialog fixed
	- use initalization list for init local vars instead inside constructor on mediainfo dialog

23. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- regression on saving thumbnail data to catalog file fixed
	- dont add history item on save/save as if already in list
	- add media fails after previous cancelled scan fixed

22. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- crash on reading fileinfo in some cases fixed
	- crash on reading file content fixed
	- memleak at detecting cd/dvd type fixed
	- memleak on open cd device fixed
	- endless loop fixed on scanning avi info at file with broken avi header

14. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- memleak at dirview class fixed
	- memleaks at recent menu fixed
	- cleanup of mediainfo fixed

13. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- memleak on reading catalog at read content fixed
	- some debug info disabled
	- memleak at mediainfo fixed
	- memleak at config class fixed
	- memleak at HDirectoryView fixed
	- double free fixed
	- memleak on setting splitter style fixed
	- memleaks on exit fixed
	- memleaks on closing catalog fixed

09. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- initial russian translation added (thanks to ferm32 (Vitaly A. Kuzmin))

08. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- displaying nfo pattern on debug info disabled
	- return type of isIdentical changed from int to bool 
	- media name not changed after dialog on add media fixed (#53)
	- check for existing media name not only for cd/dvd added
	- missing initialisation of QTextCodec resulting in unability to run mediainfo on accentuated filenames fixed (#55)
	- missing close file handle on xml export fixed (#56)
	- wrong read mode of catalog on xml export fixed (#57)

12. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- menu entries/context menu entries for enable/disable encryption added